Plot GLITCHERRORRATES with non, medium, high glitch impacts. Correct legend labels for RANDOMCONTRAST plots.

--- a/PaperDraft/picturesneeded.htm
+++ b/PaperDraft/picturesneeded.htm
@@ -18,21 +18,28 @@ border-collapse: collapse;
 </style>
 </head>
 <h1 id="pretty-pictures-we-need-for-the-paper-publication-quality">Pretty pictures we need for the paper, <em>publication quality</em></h1>
-<p>RBLandau 20180824</p>
+<p>RBLandau 20180915</p>
 <hr />
 <p>Notes on pictures:</p>
 <ul>
-<li>Aspect ratio 16:10, raw size 1600x1000 or greater for publication, 800x500 for easier viewing while editing. [Do journals have standards for sizes and aspects? <em>Science</em> does, but I've never looked at others.]</li>
-<li>All log-log.</li>
+<li>Aspect ratio 16:10, raw size 1600x1000 or greater for publication, 800x500 for easier viewing while editing. [This is just a SWAG on my part. Do journals have standards for sizes and aspects? <em>Science</em> does, but I've never looked at others.] Current default size in PlotUtil.r is 1200x750. Sizes of individual plots can be adjusted with the sSize=<string> argument to the fnPlotMakeFile() call.<br />
+</li>
+<li>Problem: the size and placement of manual elements, such as legends, depend on the size at which the picture is rendered. We may need to know the size for publication well in advance so we can adjust these elements.<br />
+</li>
+<li>Question: color in the plots. ggplot assigns colors to points, lines, and legends in some order or other, and the cases differ between pictures. Do we always want the best case line to be in, e.g., black or blue or red or green? Question: non-color in the plots. It may be that the publication wants everything in black and white, with maybe gray permitted, so that we will have to change the distinguishing feature of the plots to point shapes instead of colors.<br />
+</li>
+<li>All axes log-log, for error rates and loss rates. This means that zero errors need to be shifted slightly away from numerical zero. The current choice is 0.001% or 10ppm. I tried 1ppm, but that just creates a lot of empty space at the bottom of the graphs.<br />
+</li>
+<li>Need text to explain that real zeros on the log(percent loss) axis isn't actually zero.</li>
 <li>Almost all need decade lines for loss rates: 1%, 0.1%, 0.01%, I think. Horizontal dotted lines with small labels. Would be good if the lines were easily distinguished, e.g., by weight, but not clear that's possible. What would Tufte say?</li>
+<li>Need text to describe why low half-lives and why 3,4 copies: otherwise numbers too small to make clear pictures, best to look at where the differences are exaggerated but parallel.<br />
+</li>
+<li>Note that one would never actually use disks with such low half-lives, but they are needed to show the phenomena.<br />
+</li>
 <li>X half-life scales 2-1000 or 2-100.</li>
 <li>Legends upper right (if I can force legends at all; may have to be manual annotations, yuck).</li>
 <li>Attempt consistent color labeling for number of copies, but not sure this is reasonable in R.</li>
 <li>Describe data plots: #copies, losses, error injection, log scales x and y, percent losses, trimmed means (25%=midmean, maybe only 10%) of sample size=21, colors=black or blue usually best case recommendation.</li>
-<li>Describe why low half-lives and why 3,4 copies: otherwise numbers too small to make clear pictures, best to look at where the differences are exaggerated but parallel.<br />
-</li>
-<li>Note that one would never actually use disks with such low half-lives, but they are needed to show the phenomena.<br />
-</li>
 <li>I will have to regerate the data for most of these, rats.<br />
 </li>
 <li>Comments inside the graph area will be done with annotation(), also rats.</li>
@@ -223,11 +230,11 @@ border-collapse: collapse;
 </table>
 <p>Notes from 20180821</p>
 <ul>
-<li>Need convincing pic for five audited copies in calm days. Add 1% and 0.1% lines and see what it looks like. Check also for much longer periods, e.g., 30 and 50 years.<br />
+<li>DONE: Need convincing pic for five audited copies in calm days. Add 1% and 0.1% lines and see what it looks like. Check also for much longer periods, e.g., 30 and 50 years.<br />
 </li>
-<li>Random: compare same number of segments, just with vs without replacement. How many copies? Year, quarter, month. Maybe also 5 year cycle with 5 segments, done with replacement, just for comparison.<br />
+<li>DONE: Random: compare same number of segments, just with vs without replacement. How many copies? Year, quarter, month. Maybe also 5 year cycle with 5 segments, done with replacement, just for comparison.<br />
 </li>
-<li>Use names not numbers for the figures to allow us to reorder them. Numbers assigned at the last minute.<br />
+<li>DONE: Use names not numbers for the figures to allow us to reorder them. Numbers assigned at the last minute.<br />
 </li>
 <li>Segments: ignore monthly, but leave the 2 year line.<br />
 </li>
